modify html, css

--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,8 @@ header {
   transition: .3s;
 }
 header.change {
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.6);
+  backdrop-filter: blur(10px);
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
 header.active {
@@ -303,6 +304,24 @@ header.active {
   position: relative;
   display: flex;
   align-items: center;
+}
+.intro-headline {
+  position: relative;
+  opacity: 0;
+  animation: introAni 1s 0.5s ease-in-out forwards;
+}
+@keyframes introAni {
+  0% {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  70% {
+    transform: translateY(-10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
 .intro-headline h2,
 .intro-headline h1 {
