--- a/css/style.css
+++ b/css/style.css
@@ -605,6 +605,7 @@ header.active {
   color: var(--primary-color);
   font-size: 30px;
   font-weight: bold;
+  font-family: var(--primary-font);
 }
 .mobile-items .detail > p {
   color: #777;
@@ -756,6 +757,7 @@ header.active {
   font-size: 26px;
   color: var(--primary-color);
   font-weight: bold;
+  font-family: var(--primary-font);
 }
 .web-info-wrapper {
   font-size: 16px;
