--- a/css/responsive-mobile.css
+++ b/css/responsive-mobile.css
@@ -30,22 +30,13 @@
   /* Slogan */
   .slogan {
     display: inline-block;
-    font-size: 24px;
+    font-size: 22px;
     margin-top: 0px;
     margin-bottom: 20px;
   }
   .slogan:before {
     font-size: 20px;
     left: -18px;
-  }
-  .epilogue-summary .slogan {
-    margin-top: 30px;
-  }
-  .epilogue-summary .slogan:before {
-    left: -20px;
-  }
-  .epilogue-summary .slogan br {
-    display: none;
   }
   /* Button View */
   .btn-view {
@@ -268,6 +259,11 @@
     flex: 1;
   }
 
+  /* ######## Featherlight Custom CSS ######## */
+  .featherlight .featherlight-close-icon {
+    top: 88%;
+  }
+
   /* ########## Section: Web ########## */
   .web-items {
     flex-direction: column;
@@ -382,7 +378,15 @@
     font-size: 14px;
   }
   .epilogue-summary .slogan {
+    display: inline-block;
+    margin-top: 30px;
     font-size: 30px;
+  }
+  .epilogue-summary .slogan:before {
+    left: -10px;
+  }
+  .epilogue-summary .slogan br {
+    display: none;
   }
   .epilogue-list-item {
     margin: 20px 0;
